# m8flow

./: AGENTS.md  README.md  sample.env
.github/workflows/: ci.yml  codex-pr-review.yml
docker/: keycloak-entrypoint.sh  m8flow-docker-compose.yml  m8flow.frontend.Dockerfile
docker/scripts/: m8flow_frontend_entrypoint.sh
m8flow-backend/: README.md
m8flow-backend/keycloak/: start_keycloak.sh
m8flow-backend/keycloak/realm_exports/: m8flow-tenant-template.json
m8flow-backend/migrations/versions/: h1a2b3c4d5e6_add_user_username_realm_uniqueness.py  h8c9d0e1f2g3_add_process_model_bpmn_version.py  i2b3c4d5e6f7_allow_super_admin_rls_bypass.py
m8flow-backend/sample_templates/: README.md
m8flow-backend/src/m8flow_backend/: api.yml  config.py  tenancy.py
m8flow-backend/src/m8flow_backend/docs/: rls_notes.md
m8flow-backend/src/m8flow_backend/models/: nats_token.py  process_instance.py  process_model_bpmn_version.py
m8flow-backend/src/m8flow_backend/routes/: events_controller.py  tasks_controller_patch.py
m8flow-backend/src/m8flow_backend/services/: authentication_service_patch.py  authorization_service_patch.py  jinja_service_patch.py  (+8 more)
m8flow-connector-proxy/: Dockerfile  README.md  pyproject.toml
m8flow-frontend/: README.md  index.html  vite.config.ts
m8flow-frontend/docker_build/: nginx.conf.template
m8flow-frontend/public/: manifest.json
m8flow-frontend/src/: ContainerForExtensions.tsx
m8flow-frontend/src/components/: useDiagramImport.ts  useDiagramModeler.ts
m8flow-frontend/src/services/: UserService.ts
m8flow-nats-consumer/: consumer.py
(+15 files in other folders)
